@@ -2,6 +2,7 @@
 
         * tmstatus.sh: if the logs are read, display the backup speed
         * tmstatus.sh (status): Shorten the %/s if less then 1
+        * tmstatus.sh (status): Handle a speed of '-'
 
 2023-04-02  Matteo Corti  <matteo@corti.li>
 
